# datafunctions

./: .gitignore  .travis.yml  README.md  make_release.sh  pyproject.toml  setup.cfg
datafunctions/: __init__.py  datafunctions.py
tests/: test_datafunctions.py
