[metadata]
name = datafunctions
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Automatic (de)serialization of arguments and functions
url = http://github.com/alexmojaki/datafunctions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = datafunctions
install_requires = marshmallow; marshmallow_dataclass
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
include_package_data = True
tests_require = pytest

[options.extras_require]
tests = pytest
